# coursework-structure

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  drizzle.config.ts  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
notes/: .gitkeep
public/: .gitkeep
scripts/: make-icon.py  make-icons.py  migrate.ts
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  error.rs  import_runner.rs  importer.rs  lib.rs  main.rs  models.rs  paths.rs  plan.rs
src-tauri/tests/: import_real.rs  parse_real.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/import/: route.ts
src/app/api/notes/: route.ts
src/app/api/plan/complete/: route.ts
src/app/calendar/: page.tsx
src/components/: ImportButton.tsx  NoteEditor.tsx  NoteStream.tsx  VideoPlayer.tsx
src/db/: client.ts  schema.ts
src/lib/: api.ts  importRunner.ts  importer.ts  notes.ts  plan.ts  slug.ts
src/pages/: Admin.tsx  Calendar.tsx  CourseDetail.tsx  ItemPlayer.tsx  Today.tsx
src/scripts/: import.ts
